--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     </properties>
 
     <build>
+        <sourceDirectory>src</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>pl.project13.maven</groupId>
